cluster/apps/networking/traefik-internal/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "traefik-internal"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "int.${SECRET_DOMAIN}"
spec:
  ingressClassName: "traefik-internal"
  tls:
    - hosts:
        - "traefik-int.${SECRET_DOMAIN}"
      secretName: "traefik-int-dashboard-tls"
  rules:
    - host: "traefik-int.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
